--- a/style.css
+++ b/style.css
@@ -1,688 +1,94 @@
-* {
-    margin: 0;
+.body{
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
-    scroll-behavior: smooth;
+    width: 150vh;
 }
 
-.body {
-    width: 100%;
-    max-width: 1440px;
+.header{
+    height: 120vh;
+    background-image: url("img/header/header.png");
 }
 
-/*
-    Navigation
-*/
-
-.header {
-    width: 100%;
-    height: 112px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-}
-
-.menuboard {
+.navigation{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 160px;
-    padding-top: 10px;
 }
 
-.logo img {
-    width: 64px;
-    height: 64px;
+.navigation .logo{
+   width: 88px;
+   height: 48px;
+   margin-top: 10px;
+   margin-left: 30px;
 }
 
-.menuTabs {
+.navTextIcon{
     display: flex;
-    align-items: center;
-    gap: 40px;
-    font-size: 24px;
-    font-family: 'Raleway', sens-serif;
+    margin-right: 30px;
+    gap: 30px;
 }
 
-.menuTabs a {
+.navTextIcon a{
     text-decoration: none;
     color: white;
 }
 
-.menuTabs a:hover{
-    color: #9F0908;
+.navTextIcon a:hover {
+    text-decoration: none;
+    color: gold;
 }
 
-.btnPhone {
+.navTextIcon img{
+    height: 20px;
+}
+
+.headerText {
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 8px;
-    padding: 6px 16px;
-    background-color: #9F0908;
-    border-radius: 6px;
-    border-color: white;
-    border-style: solid;
+    flex-direction: column;
+    padding-top: 300px;
+}
+
+.headerText h1 {
+    font-size: 70px;
     color: white;
-}
-
-/*
-    Mainground
-*/
-
-.head {
-    width: 100%;
-    height: 100vh;
-    background-image: url("assets/img/1_hero/JPG/hero_bg.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.headText {
-    position: relative;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: white;
-}
-
-.h1 h1{
-    font-size: 96px;
-    text-align: center;
     margin: 0;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
 }
 
-.span span {
+.headerText p{
+    margin: 0;
+    font-size: 30px;
+    color: white;
+}
+
+.headerText button{
+    background-color: gold;
+    color: white;
+    margin-top: 50px;
+    padding: 12px 10px 12px 10px;
+    font-size: 20px;
+    border-radius: 5px;
+}
+
+.slogan{
+    background-color: white;
+    margin: 40px;
+}
+
+.sloganText{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    color: gold;
     font-size: 24px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 400;
+    margin: 0;
 }
 
-/*
-    ORDER SECTION
-*/
-
-.orderSection{
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-
-.order {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.orderSection h2{
-    color: #9F0908;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-    font-size: 80px;
-}
-
-.orderIcon{
-    padding-top: 64px;
-    gap: 150px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    text-align: center;
-}
-
-.orderImg{
-    display:block;
-    justify-content: center;
-    align-items: center;
-    padding-left: 12px;
-}
-
-.orderText{
-    padding-top: 16px;
-    font-size: 56px;
-    font-family: 'Economica', sans-serif;
-    font-weight: 700;
-    justify-content: center;
-    align-items: center;
-}
-
-/*
-    OUR MENU SECTION
-*/
-
-.menuSection{
-    background-image: url('assets/img/3_section_our_menu/JPG/section_our_menu_bg.jpg');
-}
-
-.menuSection h2{
-    font-size: 80px;
-    color: #9F0908;
-    padding-bottom: 64px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 120px;
-}
-
-.ourMenu{
-    padding-bottom: 120px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.ramen{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 80px;
-    padding-bottom: 56px;
-}
-
-.ramenImg{
-    width: 352px;
-    height: 352px;
-    display: flex;
-}
-
-.menuTable table th{
-    font-size: 56px;
-    color: #000000;
-    padding-bottom: 16px;
-    font-family: 'Economica', sans-serif;
-    font-weight: 700;
-}
-
-.menuTable table td{
-    gap: 8px;
-    font-size: 32px;
-    color: #675E54;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-}
-
-/*
-    MAP SECTION
-*/
-
-.anfahrt {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.mapH2 h2{
-    padding-top: 120px;
-    color:#9F0908;
-    font-size: 80px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-}
-
-.adresse{
-    font-size: 24px;
-    text-align: center;
-    padding-bottom: 64px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 400;
-}
-
-.adresse span{
-    display: inline-flex;
-    align-items: center;
-}
-
-.map iframe{
+.video{
     width: 100%;
-    height: 600px;
-}
-
-/*
-    FOOTER
-*/
-
-.footerContainer{
-    height: 144px;
-    background-color: #0A141E;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 160px;
-}
-
-.footerLogo {
-    height: 44px;
-}
-
-.icons {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.icons img {
-    width: 40px;
-    height: 40px;
-}
-
-/*
-    Media Qaury
-*/
-
-@media(min-width: 768px) and (max-width: 1280px){
-    .body{
-        overflow-x: hidden;
-    }
-
-    .menuboard {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 10px;
-        padding-top: 10px;
-    }
-
-    .logo img {
-        width: 64px;
-        height: 64px;
-    }
-
-    .h1 h1{
-        font-size: 72px;
-        text-align: center;
-        margin: 0;
-        font-family: 'Raleway', sans-serif;
-        font-weight: 700;
-    }
-
-    .span span {
-        font-size: 20px;
-        font-family: 'Raleway', sans-serif;
-    }
-
-    .menuTabs a:not(.btnPhone){
-        display:none;
-    }
-
-    .btnPhone{
-        font-size: 20px;
-        font-family: 'Raleway', sans-serif;
-    }
-
-    /*
-        ORDER
-    */
-
-    .orderSection{
-        padding-top: 96px;
-        padding-bottom: 96px;
-    }
-
-    .order {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .orderSection h2{
-        color: #9F0908;
-        font-family: 'Raleway', sans-serif;
-        text-align: center;
-        font-size: 64px;
-    }
-
-    .orderIcon{
-        padding-top: 48px;
-        gap: 128px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: row;
-        text-align: center;
-    }
-
-    .orderImg{
-        display:block;
-        justify-content: center;
-        align-items: center;
-        padding-left: 12px;
-    }
-
-    .orderText{
-        padding-top: 8px;
-        font-size: 32px;
-        font-family: 'Economica', sans-serif;
-        font-weight: 700;
-        justify-content: center;
-        align-items: center;
-    }
-
-    /*
-        MENU
-    */
-
-    .menuSection h2{
-        font-size: 64px;
-        color: #9F0908;
-        padding-bottom: 48px;
-        font-family: 'Raleway', sans-serif;
-        font-weight: 700;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-top: 96px;
-    }
-
-    .ourMenu{
-        padding-bottom: 72px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .ramen{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 24px;
-        padding-bottom: 32px;
-    }
-
-    .ramenImg{
-        width: 320px;
-        height: 320px;
-    }
-
-    .menuTable table th{
-        font-size: 32px;
-        color: #000000;
-        padding-top: 16px;
-        padding-bottom: 16px;
-        font-family: 'Economica', sans-serif;
-    }
-
-    .menuTable table td{
-        gap: 8px;
-        font-size: 24px;
-        color: #675E54;
-        font-family: 'Raleway', sans-serif;
-    }
-
-    /*
-        MAP
-    */
-
-    .mapH2 h2{
-        padding-top: 96px;
-        color:#9F0908;
-        font-size: 64px;
-        font-family: 'Raleway', sans-serif;
-        font-weight: 700;
-    }
-
-    .adresse{
-        font-size: 20px;
-        text-align: center;
-        padding-top: 8px;
-        padding-bottom: 48px;
-        font-family: 'Raleway', sans-serif;
-        font-weight: 400;
-    }
-
-    /*
-        FOOTER
-    */
-
-    .footerContainer{
-        height: 86px;
-        background-color: #0A141E;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    .footerLogo{
-        width: 50%;
-        right: 10px;
-        height: 40px;
-        object-fit: cover;
-    }
-
-    .footerLogo img{ 
-        height: 44px;
-        object-fit: cover;
-    }
-
-    .icons {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-    }
-
-    .icons img {
-        width: 40px;
-        height: 40px;
-    }
-}
-
-@media(min-width: 320px) and (max-width: 767px){
-    .body{
-        overflow-x: hidden;
-    }
-
-    .menuboard {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 10px;
-        padding-top: 10px;
-    }
-
-    .logo img {
-        width: 40px;
-        height: 40px;
-    }
-
-    .h1 h1{
-        font-size: 44px;
-        text-align: center;
-        margin: 0;
-        font-family: 'Raleway', sans-serif;
-        font-weight: 700;
-    }
-
-    .span span {
-        font-size: 16px;
-        font-family: 'Raleway', sans-serif;
-    }
-
-    .menuTabs a:not(.btnPhone){
-        display:none;
-    }
-
-    .btnPhone{
-        font-size: 16px;
-        font-family: 'Raleway', sans-serif;
-    }
-
-    /*
-        ORDER
-    */
-
-    .orderSection{
-        padding-top: 72px;
-        padding-bottom: 72px;
-    }
-
-    .order {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .orderSection h2{
-        color: #9F0908;
-        font-family: 'Raleway', sans-serif;
-        text-align: center;
-        font-size: 40px;
-    }
-
-    .orderIcon{
-        padding-top: 32px;
-        gap: 32px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .orderImg{
-        display:block;
-        justify-content: center;
-        align-items: center;
-        padding-left: 12px;
-    }
-
-    .orderText{
-        padding-top: 8px;
-        font-size: 32px;
-        font-family: 'Economica', sans-serif;
-        font-weight: 700;
-        justify-content: center;
-        align-items: center;
-    }
-
-    /*
-        MENU
-    */
-
-    .menuSection h2{
-        font-size: 40px;
-        color: #9F0908;
-        padding-bottom: 64px;
-        font-family: 'Raleway', sans-serif;
-        font-weight: 700;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-top: 72px;
-    }
-
-    .ourMenu{
-        padding-bottom: 72px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .ramen{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: column;
-        gap: 24px;
-        padding-bottom: 32px;
-        max-width: 100%;
-        width: 100%;
-    }
-
-    .spicyRamen{
-        flex-direction: column-reverse;
-    }
-
-    .ramenImg{
-        width: 100%;
-        max-width: 300px;
-        height: auto;
-        aspect-ratio: 1/1;
-        object-fit: cover;
-        display: flex;
-        justify-content: center;
-        align-self: center;
-    }
-
-    .menuTable table th{
-        font-size: 30px;
-        color: #000000;
-        padding-top: 16px;
-        padding-bottom: 8px;
-        font-family: 'Economica', sans-serif;
-    }
-
-    .menuTable table td{
-        gap: 8px;
-        font-size: 20px;
-        color: #675E54;
-        font-family: 'Raleway', sans-serif;
-    }
-
-    /*
-        MAP
-    */
-
-    .mapH2 h2{
-        padding-top: 72px;
-        color:#9F0908;
-        font-size: 40px;
-        font-family: 'Raleway', sans-serif;
-        font-weight: 700;
-    }
-
-    .adresse{
-        font-size: 16px;
-        text-align: center;
-        padding-bottom: 40px;
-        font-family: 'Raleway', sans-serif;
-        font-weight: 400;
-    }
-
-    /*
-        FOOTER
-    */
-
-    .footerContainer{
-        height: 86px;
-        background-color: #0A141E;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 60px px;
-    }
-
-    .footerLogo {
-        width: 50%;
-        height: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .footerLogo img {
-        height: 40px;
-        width: auto;
-        object-fit: cover;
-        clip-path: inset(0 220px 0 -20%);
-    }
-
-    .icons {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-    }
-
-    .icons img {
-        width: 32px;
-        height: 32px;
-    }
+    height: 150vh;
 }
